<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <RelativeLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1089ff"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/second"
        android:textColor="#000"
        android:textSize="36sp" />

    <TableLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/row_gold"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/gold_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/batman2008" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/batman"
                    android:textSize="@dimen/text_22" />

                <TextView
                    android:id="@+id/tv_gold_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/score_21"
                    android:textSize="@dimen/text_22" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/row_silver"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/silver_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/spiderman2004" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_silver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textColor="@color/black"
                    android:text="@string/spidey"
                    android:textSize="@dimen/text_22" />

                <TextView
                    android:id="@+id/tv_number_silver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/score_13"
                    android:textSize="@dimen/text_22" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/row_bronze"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/bronze_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ironman2008" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bronze"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ironman"
                    android:textSize="@dimen/text_22" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/score_11"
                    android:textSize="@dimen/text_22" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width='match_parent'
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_to_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#1089ff"
                android:text="Go: 2012"
                android:textColor="#f6f078" />

        </TableRow>


    </TableLayout>




</LinearLayout>


